add patch and post methods in rest api

--- a/OrdersJPA/src/main/resources/application.properties
+++ b/OrdersJPA/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #logging.path =C:/Users/ovalekseeva/Idea/logs/
 #logging.file = ${logging.path}/orders.log
-#logging.level.root = INFO
-#logging.level.org.springframework.security=INFO
+logging.level.root = DEBUG
+#logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.thymeleaf.cache=false
