--- a/OrdersJPA/src/main/resources/application.properties
+++ b/OrdersJPA/src/main/resources/application.properties
@@ -1,8 +1,19 @@
+#logs
 #logging.path =C:/Users/ovalekseeva/Idea/logs/
 #logging.file = ${logging.path}/orders.log
-logging.level.root = DEBUG
+#logging.level.root = DEBUG
 #logging.level.org.springframework.security=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.thymeleaf.cache=false
+#data rest api base path
+spring.data.rest.base-path=/api
+
+#DB
+spring.datasource.url=jdbc:h2:file:~/h2/spring-boot-h2-db;MODE=MYSQL
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+hibernate.id.new_generator_mappings=true
